[project]
name = "trustworthy-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flashtorch>=0.1.3",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "mapextrackt>=0.4.8.6",
    "opencv-python>=4.12.0.88",
    "pillow==9.5.0",
    "requests>=2.32.5",
    "scipy>=1.16.1",
    "scratchai-nightly>=0.0.1a3",
    "torchvision>=0.23.0",
    "tqdm>=4.67.1",
]
